# TokenMonitor

./: CHANGELOG.md  README.md  package-lock.json  package.json
docs/superpowers/plans/: 2026-03-15-ui-theming-and-chart-palette.md  2026-03-16-calendar-heatmap.md  2026-03-16-period-navigation.md
docs/superpowers/specs/: 2026-03-15-provider-theming-chart-palette-design.md  2026-03-16-calendar-heatmap-design.md  2026-03-16-period-navigation-design.md  2026-03-19-github-workflows-design.md  2026-03-19-macos-glass-effect-design.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray-icon@2x.rgba
src-tauri/src/: ccusage.rs  commands.rs  hourly.rs  lib.rs  models.rs  parser.rs  paths.rs  pricing.rs  rate_limits.rs  tray_render.rs
src-tauri/src/commands/: config.rs  tray.rs  usage_io.rs  usage_query.rs
src-tauri/src/rate_limits/: kimi.rs  mod.rs
src-tauri/src/stats/: subagent.rs
src-tauri/src/statusline/: windows.rs
src-tauri/src/usage/: archive.rs  claude_parser.rs  codex_parser.rs  cursor_parser.rs  device_aggregation.rs  integrations.rs  kimi_parser.rs  mod.rs  parser.rs  pricing.rs  pricing_fallback.json
src/lib/: bootstrap.test.ts  bootstrap.ts  changelog.ts  footerView.test.ts  footerView.ts  providerMetadata.ts  rateLimitMonitor.test.ts  rateLimitMonitor.ts  rateLimitsView.test.ts  rateLimitsView.ts  resizeDebug.ts  trayTitle.test.ts  trayTitle.ts  windowAppearance.test.ts  windowAppearance.ts  windowSizing.ts
src/lib/components/: Calendar.svelte  Chart.svelte  (+12 more)
(+9 files in other folders)
