[package]
name = "token-monitor"
version = "0.1.0"
description = "macOS menu bar token usage monitor for Claude Code and Codex"
edition = "2021"

[lib]
name = "token_monitor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["process", "fs", "time"] }
dirs = "6"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
